Fixing layout issue.

--- a/src-modules/org/opencms/gwt/client/ui/css/listtree.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/listtree.css
@@ -6,6 +6,7 @@
 
 .listTreeItem {
 	margin: 2px 0;
+	display: block;
 }
 
 .listTreeItemHandler {
